# thinkpad-hpd

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
config/: thinkpad-hpd.toml
docs/: analysis.md
kcm/: CMakeLists.txt  hpdsettings.cpp  kcm_thinkpadhpd.json
kcm/po/zh_CN/: kcm_thinkpadhpd.po
kcm/ui/: main.qml
packaging/: 99-thinkpad-hpd.rules  org.thinkpad.HumanPresence1.conf  thinkpad-hpd-agent.service  thinkpad-hpd.service
src/: activity.rs  agent.rs  config.rs  iio.rs  main.rs  screensaver.rs  service.rs
