[package]
name = "thinkpad-hpd"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Native HID-SENSOR-200011 human-presence daemon and KDE agent"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
evdev = { version = "0.13", features = ["tokio"] }
futures-util = "0.3"
inotify = "0.10"
nix = { version = "0.29", features = ["poll"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zbus = { version = "5.14", default-features = false, features = ["tokio"] }

[dev-dependencies]
tempfile = "3.23"
